@startuml
title SO DO LOP 3 TANG - LAP PHIEU THU
top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam classBorderColor #7F8C8D

package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHLapPhieuThu #BFE8BA {
    - lblMaPDS: Label
    - lblMaPhieuCoc: Label
    - lblMaHopDong: Label
    - lblHoTenKhachHang: Label
    - lblPhong: Label
    - lblTienThuThem: Label
    - cboPhuongThuc: ComboBox
    - fileMinhChung: FileUpload
    - imgXemTruocMinhChung: Image
    - btnXemMinhChung: Button
    - btnXoaMinhChung: Button
    - btnXacNhan: Button
    - dlgXacNhanThuTien: AlertDialog
    --
    + taiChiTiet(maPDS: String)
    + xacNhanThuTien()
  }
}
package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class ThanhToanTraPhong #F4E3A2 {
    + LayChiTietPhieuDoiSoat(maPDS: String): Object
    + TienHanhThuTien(maPDS: String, phuongThuc: String, anhMinhChung: String, maNV: String): PhieuThu
  }
  class PhieuDoiSoat #F4E3A2 {
    + LayChiTietPhieuDoiSoat(maPDS: String): PhieuDoiSoat
    + ChuyenSangDaTatToan(maPDS: String)
  }
  class PhieuThu #F4E3A2 {
    + DaTonTaiChoPhieuDoiSoat(maPDS: String): Boolean
    + TaoPhieuThu(maPDS: String, soTien: Decimal, phuongThuc: String, anhMinhChung: String, maNV: String, thoiDiem: DateTime): PhieuThu
    + LuuPhieu()
  }
}
package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class PhieuDoiSoatDB #BFDCF0 {
    + GetPhieuDoiSoatTheoMaPDS(maPDS: String): PhieuDoiSoat
    + UpdateTrangThai(maPDS: String, trangThaiHienTai: String, trangThaiMoi: String): Boolean
  }
  class PhieuThuDB #BFDCF0 {
    + TonTaiTheoMaPhieuDoiSoat(maPDS: String): Boolean
    + InsertPhieuThu(phieuThu: PhieuThu)
  }
}

GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
PhieuThu -[hidden]down- PhieuDoiSoatDB
MHLapPhieuThu o-down- ThanhToanTraPhong
ThanhToanTraPhong o-- PhieuDoiSoat
ThanhToanTraPhong o-- PhieuThu
PhieuDoiSoat o-down- PhieuDoiSoatDB
PhieuThu o-down- PhieuThuDB
@enduml
